--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap");
+.mv-auth-layout {
+  height: 100vh;
+  display: flex;
+  background: #2E303A;
+  width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mv-auth-layout .mv-auth-left {
+  width: 30%;
+  height: 100%;
+  max-width: 531px;
+  min-width: 400px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+}
+.mv-auth-layout .mv-auth-left .mv-auth-content {
+  display: flex;
+  width: 300px;
+  align-items: center;
+  flex-direction: column;
+}
+.mv-auth-layout .mv-auth-left .mv-auth-content h1 {
+  margin-bottom: 16px;
+}
+.mv-auth-layout .mv-auth-left .mv-auth-content p {
+  text-align: center;
+  margin-bottom: 32px;
+}
+.mv-auth-layout .mv-auth-left .mv-auth-content form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.mv-auth-layout .mv-auth-right {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 700px) {
+  .mv-auth-layout .mv-auth-left {
+    max-width: 100% !important;
+    width: 100%;
+  }
+  .mv-auth-layout .mv-auth-right {
+    display: none !important;
+  }
+}
+.ant-input-affix-wrapper {
+  border-radius: 50px;
+  color: rgba(207, 209, 222, 0.2);
+  background-color: rgba(63, 70, 96, 0.4);
+  border: 1px solid rgba(207, 209, 222, 0.4);
+  padding: 4px 16px;
+}
+.ant-input-affix-wrapper input {
+  background: transparent;
+  caret-color: #F7F9FF;
+  color: #F7F9FF;
+  font: 400 14px "Palanquin", sans-serif;
+}
+.ant-input-affix-wrapper input::-moz-placeholder {
+  color: rgba(207, 209, 222, 0.4);
+}
+.ant-input-affix-wrapper input:-ms-input-placeholder {
+  color: rgba(207, 209, 222, 0.4);
+}
+.ant-input-affix-wrapper input::placeholder {
+  color: rgba(207, 209, 222, 0.4);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  background-color: transparent;
+  -webkit-text-fill-color: #F7F9FF;
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+.mv-small-text {
+  color: #F7F9FF;
+  font: 400 14px "Palanquin", sans-serif;
+}
+
+.mv-big-title {
+  color: #F7F9FF;
+  font: 600 32px "Montserrat", sans-serif;
+  text-transform: uppercase;
+}
+
+.mv-text {
+  color: #CFD1DE;
+  font: 400 16px "Palanquin", sans-serif;
+}
+
+.mv-text-highlight {
+  color: #598EF7;
+  font-weight: 600;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+.ant-btn-background-ghost.ant-btn-primary {
+  color: #598EF7;
+  border-color: #598EF7;
+  text-shadow: none;
+}
+
+.ant-btn {
+  border-radius: 50px;
+  font: 400 16px "Palanquin", sans-serif;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.ant-btn.ant-btn-background-ghost:focus,
+.ant-btn.ant-btn-background-ghost:hover {
+  color: #598EF7;
+  border-color: #598EF7;
+  opacity: 0.8;
+  background-color: rgba(63, 70, 96, 0.2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+body {
+  background: #2E303A;
+}/*# sourceMappingURL=App.css.map */
