--- a/src/assets/styles/variables/_fonts.scss
+++ b/src/assets/styles/variables/_fonts.scss
@@ -2,3 +2,4 @@
 $title: 600  32px 'Montserrat',sans-serif;
 $text: 400 16px 'Palanquin', sans-serif;
 $small-text: 400 14px 'Palanquin', sans-serif;
+$small-text-out: 600 12px 'Montserrat', sans-serif;
