--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -7,6 +7,8 @@
 
 @import "./components/components";
 
+@import "./layout/layout";
+
 @import "./gloables/typography";
 @import "./gloables/ui-global";
 
