--- a/src/assets/styles/components/_components.scss
+++ b/src/assets/styles/components/_components.scss
@@ -1,1 +1,6 @@
 @import "./form/input";
+
+@import "./ui/song-card";
+@import "./ui/grid-display";
+@import "./ui/table";
+@import "./ui/collection-card";
