--- a/src/assets/styles/components/form/_input.scss
+++ b/src/assets/styles/components/form/_input.scss
@@ -28,3 +28,7 @@ select:-webkit-autofill:focus {
     -webkit-text-fill-color: $light;
     transition: background-color 5000s ease-in-out 0s;
 }
+
+.ant-input-prefix {
+    margin-right: 8px;
+}
