--- a/src/assets/styles/variables/_fonts.scss
+++ b/src/assets/styles/variables/_fonts.scss
@@ -1,5 +1,7 @@
-
-$title: 600  32px 'Montserrat',sans-serif;
+$title: 900 32px 'Montserrat', sans-serif;
+$small-title: 900 16px 'Montserrat', sans-serif;
+$big-text: 700 20px 'Palanquin', sans-serif;
 $text: 400 16px 'Palanquin', sans-serif;
 $small-text: 400 14px 'Palanquin', sans-serif;
 $small-text-out: 600 12px 'Montserrat', sans-serif;
+$extra-small-text-out: 600 12px 'Palanquin',sans-serif;
