--- a/src/assets/styles/pages/_pages.scss
+++ b/src/assets/styles/pages/_pages.scss
@@ -65,3 +65,13 @@
         }
     }    
 }
+
+@media (max-width: 1400px) {
+    .mv-page-layout {
+        .mv-page-cta {
+            position: absolute;
+            top: 80px;
+            right: 32px;
+        }
+    }
+}
