--- a/src/features/player/styles/_player.scss
+++ b/src/features/player/styles/_player.scss
@@ -1,5 +1,6 @@
 @import "./components/music-player";
 @import "./components/music-library";
+@import "./components/music-controls";
 
 .mv-player {
     display: flex;
