--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,8 @@ select:-webkit-autofill:focus {
   display: flex;
   align-items: center;
   border-radius: 10px;
-  border: none;
+  border: 1px solid rgba(207, 209, 222, 0.4);
+  transition: 0.3s;
   cursor: pointer;
 }
 .mv-song-card:hover {
@@ -360,6 +361,7 @@ select:-webkit-autofill:focus {
   left: 0;
   width: 100%;
   padding: 0px 32px;
+  border-bottom: 1px solid rgba(207, 209, 222, 0.4);
 }
 
 .navigation {
@@ -422,9 +424,6 @@ select:-webkit-autofill:focus {
 #mv-right-sider .ant-layout-sider-children {
   padding-top: 104px;
 }
-#mv-right-sider .logo {
-  border-bottom: 1px solid rgba(207, 209, 222, 0.4);
-}
 
 #mv-left-sider {
   display: block;
@@ -485,6 +484,10 @@ select:-webkit-autofill:focus {
 
 #menu-search-bar {
   display: block;
+}
+
+.mv-user-profile {
+  border: 2px solid #598EF7 !important;
 }
 
 @media (max-width: 1400px) {
@@ -601,6 +604,15 @@ h6 {
   border-color: rgba(207, 209, 222, 0.4);
 }
 
+.ant-avatar {
+  border: 1px solid rgba(207, 209, 222, 0.4);
+  transition: 0.3s;
+}
+.ant-avatar:hover {
+  border: 2px solid #598EF7;
+  background-color: rgba(63, 70, 96, 0.1);
+}
+
 body {
   background: #2E303A;
 }
@@ -634,24 +646,79 @@ body {
   margin: 0;
   color: #F7F9FF;
 }
-.mv-music-player .mv-controls {
+
+.rotate-animation {
+  -webkit-animation: rotation 6s infinite linear;
+          animation: rotation 6s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+.mv-playing-now {
+  border: 2px solid #598EF7;
+}
+
+.ant-list-split .ant-list-item {
+  border-bottom: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  margin-bottom: 4px;
+}
+.ant-list-split .ant-list-item .anticon {
+  color: #F7F9FF;
+}
+.ant-list-split .ant-list-item:hover {
+  background-color: #3F4660;
+  border-radius: 50px;
+}
+.ant-list-split .ant-list-item:hover .ant-avatar {
+  border: 2px solid #598EF7;
+}
+
+.ant-list-item-meta-title {
+  color: #F7F9FF;
+  font: 400 14px "Palanquin", sans-serif;
+  text-transform: capitalize;
+}
+
+.mv-selected-music {
+  background-color: #3F4660;
+  border-radius: 50px;
+}
+.mv-selected-music .ant-avatar {
+  border: 2px solid #598EF7;
+}
+.mv-selected-music .anticon {
+  color: #598EF7 !important;
+}
+.mv-selected-music .ant-list-item-meta-title {
+  color: #598EF7 !important;
+}
+
+.mv-controls {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 8px;
 }
-.mv-music-player .mv-controls .anticon {
+.mv-controls .anticon {
   color: #598EF7;
-}
-
-.ant-list-split .ant-list-item {
-  border-bottom: none;
-}
-
-.ant-list-item-meta-title a {
-  color: #F7F9FF;
-  font: 400 14px "Palanquin", sans-serif;
-  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .mv-player {
