--- a/src/assets/styles/components/ui/_song-card.scss
+++ b/src/assets/styles/components/ui/_song-card.scss
@@ -4,7 +4,8 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
-    border: none;
+    border: 1px solid rgba(207, 209, 222, 0.4);
+    transition: 0.3s;
     cursor: pointer;
     &:hover {
         border: 2px solid $primary;
@@ -36,3 +37,4 @@
         }
     }
 }
+
