--- a/src/features/player/styles/components/_music-player.scss
+++ b/src/features/player/styles/components/_music-player.scss
@@ -26,13 +26,22 @@
             }
         }
     }
-    .mv-controls {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
-        .anticon {
-            color: $primary;
-        }
+}
+
+.rotate-animation {
+    animation: rotation 6s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
     }
+
+    to {
+        transform: rotate(359deg);
+    }
+}
+
+.mv-playing-now {
+    border: 2px solid $primary;
 }
