--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,12 @@ select:-webkit-autofill:focus {
   margin-right: 8px;
 }
 
+.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper,
+.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper:hover {
+  background: rgba(63, 70, 96, 0.4);
+  border-color: #ff4d4f;
+}
+
 .mv-song-card {
   position: relative;
   overflow: hidden;
@@ -265,6 +271,10 @@ select:-webkit-autofill:focus {
   padding: 8px 16px;
 }
 
+.ant-table-tbody > tr > td .ant-avatar {
+  min-width: 32px;
+}
+
 .mv-collection-card {
   height: 200px;
   width: 150px;
@@ -361,7 +371,6 @@ select:-webkit-autofill:focus {
   left: 0;
   width: 100%;
   padding: 0px 32px;
-  border-bottom: 1px solid rgba(207, 209, 222, 0.4);
 }
 
 .navigation {
@@ -444,6 +453,9 @@ select:-webkit-autofill:focus {
 }
 #mv-left-sider::-webkit-scrollbar, #mv-right-sider::-webkit-scrollbar {
   display: none;
+}
+#mv-left-sider .logo, #mv-right-sider .logo {
+  border-bottom: 1px solid rgba(207, 209, 222, 0.4);
 }
 
 .ant-menu-dark .ant-menu-item-selected .ant-menu-item-icon,
@@ -600,6 +612,15 @@ h6 {
   background-color: rgba(63, 70, 96, 0.2);
 }
 
+.ant-btn-link {
+  color: #598EF7;
+  opacity: 1;
+}
+.ant-btn-link:hover {
+  color: #598EF7;
+  opacity: 0.8;
+}
+
 .ant-divider {
   border-color: rgba(207, 209, 222, 0.4);
 }
@@ -611,6 +632,31 @@ h6 {
 .ant-avatar:hover {
   border: 2px solid #598EF7;
   background-color: rgba(63, 70, 96, 0.1);
+}
+
+.mv-unselected-icon {
+  height: 20px;
+  width: 20px;
+  min-width: 20px;
+  border: 1px solid rgba(207, 209, 222, 0.4);
+  border-radius: 50%;
+}
+
+.ant-dropdown-menu {
+  background: #3F4660;
+  border: 1px solid rgba(207, 209, 222, 0.4);
+  border-radius: 10px;
+  padding: 4px;
+}
+
+.ant-dropdown-menu-item.ant-dropdown-menu-item-active,
+.ant-dropdown-menu-item.ant-dropdown-menu-submenu-title-active,
+.ant-dropdown-menu-item:hover,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-item-active,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-active,
+.ant-dropdown-menu-submenu-title:hover {
+  background-color: rgba(207, 209, 222, 0.4);
+  border-radius: 10px;
 }
 
 body {
@@ -725,4 +771,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.mv-auth-layout .mv-auth-left .mv-auth-content form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }/*# sourceMappingURL=App.css.map */
