--- a/src/assets/styles/components/form/_input.scss
+++ b/src/assets/styles/components/form/_input.scss
@@ -32,3 +32,9 @@ select:-webkit-autofill:focus {
 .ant-input-prefix {
     margin-right: 8px;
 }
+
+.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper,
+.ant-input-affix-wrapper-status-error:not(.ant-input-affix-wrapper-disabled):not(.ant-input-affix-wrapper-borderless).ant-input-affix-wrapper:hover {
+    background: rgba(63, 70, 96, 0.4);
+    border-color: #ff4d4f;
+}
