--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -19,7 +19,7 @@
     height: 80px;
     left: 0;
     width: 100%;
-    padding: 0px 32px;border-bottom: 1px solid rgba(207, 209, 222, 0.4);
+    padding: 0px 32px;
 }
 
 .navigation {
@@ -105,6 +105,9 @@
     scrollbar-width: none;
     &::-webkit-scrollbar {
         display: none;
+    }
+    .logo {
+        border-bottom: 1px solid rgba(207, 209, 222, 0.4);
     }
 }
 
